--- a/style.css
+++ b/style.css
@@ -1,45 +1,46 @@
-body {
-  background-color: #eae1e1;
-}
-
-.title {
-  margin-top: 5%;
-  margin-left: 5%;
-  font-family: 'Montserrat', sans-serif;
-}
-
-.subtitle {
-  font-size: 18px;
-  margin-left: 5%;
-  font-family: 'Raleway', sans-serif;
-}
-
-.stack {
-  font-family: 'Raleway', sans-serif;
+ * {
+  margin: 0;
+  }
+  .page{
+  background-color:#fff;
+  margin-left:20%;
+  margin-right:20%;
+  }
+  
+  .indent {
+  margin-left:10%;
+  margin-right:10%;
+  padding:0px;
+  }
+  h1 {
+  font-family: 'Muli', sans-serif;
+  font-size:24px;
+  color:#6FA8DD;
+  }
+  h2 {
+  font-family: 'Muli', sans-serif;
+  font-size:16px;
+  text-transform:uppercase;
   font-weight: bold;
-}
-
-.info {
-  font-family: 'Raleway', sans-serif;
-}
-
-ul {
-  list-style-type: square;
-  margin: 15px;
-  padding: .5px;
-}
-
-.indent {
-  float: left;
-  margin-left: 5%;
-}
-
-img {
-  float: right;
-  margin-right: 1%;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
+  color:#6FA8DD;
+  }
+  p {
+  font-family: 'Muli', sans-serif;
+  font-size:12.5px;
+  }
+  span.bold {
+  font-weight: bold;
+  }
+  span.italic {
+  font-style: italic;
+  }
+  ul {
+  list-style-image: url('https://lh3.googleusercontent.com/g6ApEO5arXlMNF0O0y6Yt2EtYpVFKKwJ6OfGGaU37ko95eZ-JLQXsujnGLhlp9_auYdmdXsmt18xevtwl3wXltR99WRj8JYsQjQSRcu1Wc7Mlqmft2YM5BsEG_G1mlS90T0dksaUgVZn63ObB_ZrqvoxNFQ2-fYwnN8cHiowVBT7DDX3Wpy3ai6KbY-mBKV69EFd-ZKDZGcFHV6kjaeuTZNI68Z8P4oqOfZbDAk52fXma9DXvDyp_nm4zWakwDWPt4BZfigkrb7bAzxAYaD3UerRi7DRKjAXH2pT8xhTECeBf_Nb8aK4hdpOsw4muia88DX88jYkj83jFKfmJJZyglRivlYhtemWifbOfwV1aV6chP7kUNQ67g6usY8bJSmpxy9R_ucbUENIXxSEWJVV-sAPUfyth0KVOiyz-ITJ8E9q2dhYBrhFtJlA0LlquN2I96925K7Ees6fZgi3lfrVK5DEVBDQ5ut7tdOMJf-Dvp0smxpNM14nudXhq0os_auKraQIfbkDjineT93uC0IJfhS2objn5wwn8P-XsqExew3Viaj6QrLBmkvkpW9c-PZdNFrfvv-sp604bELhFN-I9rpByqfLOYg_2S7odmsodf6qAoFP=s11-no');
+  font-family: 'Muli', sans-serif;
+  font-size:12.5px;
+  margin-left:-15px;
+  }
+  .hr {
+  width:100%;
+  height:6px;
+  }
