--- a/style.css
+++ b/style.css
@@ -3,9 +3,14 @@ font-family: 'Title';
 src: url('https://shakurawoods.github.io/fonts/hijrnotes.woff') format('woff'); /* Pretty Modern Browsers */
 src: url('https://shakurawoods.github.io/fonts/hijrnotes.ttf')  format('truetype'); /* Safari, Android, iOS */
 }
+@font-face {
+font-family: 'Links';
+src: url('https://shakurawoods.github.io/fonts/bebasneue.woff') format('woff'); /* Pretty Modern Browsers */
+src: url('https://shakurawoods.github.io/fonts/bebasneue.ttf')  format('truetype'); /* Safari, Android, iOS */
+}
 h1{
 font-family: 'Title', sans-serif;
-font-size:60px;
+font-size:48px;
 }
 body{
 background-color:#c7bab5;
