--- a/style.css
+++ b/style.css
@@ -1,43 +1,50 @@
+@import url('https://fonts.googleapis.com/css?family=Ubuntu');
 @font-face {
 font-family: 'Title';
 src: url('https://shakurawoods.github.io/fonts/hijrnotes.woff') format('woff'); /* Pretty Modern Browsers */
 src: url('https://shakurawoods.github.io/fonts/hijrnotes.ttf')  format('truetype'); /* Safari, Android, iOS */
 }
-@font-face {
-font-family: 'Links';
-src: url('https://shakurawoods.github.io/fonts/bebasneue.woff') format('woff'); /* Pretty Modern Browsers */
-src: url('https://shakurawoods.github.io/fonts/bebasneue.ttf')  format('truetype'); /* Safari, Android, iOS */
-}
 h1{
 font-family: 'Title', sans-serif;
+text-align: center;
 font-size:48px;
+margin:0;
+padding:0;
+}
+.hr{
+height: 12px;
+border: 0;
+box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
 }
 body{
 background-color:#c7bab5;
-margin-left:5%;
+
 margin-top:2.5%;
 }
 ul{
 list-style-type: none;
+text-align: center;
 margin: 0;
 padding: 0;
 }
 li{
-font-family: 'Julius Sans One', sans-serif;
+font-family: 'Helvetica', sans-serif;
+font-size:28px;
+padding: 0 25px;
 display: inline; 
 }
 a{
 text-decoration: none;
 }
 a:link{
-    
+color:#000;
 }
 a:visited{
-    
+ color:#000;
 }
 a:hover{
-    
+color:#000;
 }
 a:active{
-    
+color:#000;
 }
